# flowscript-agents

./: pyproject.toml
flowscript_agents/: __init__.py  mcp.py  tool-integrity.json
tests/: test_mcp.py
