[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowscript-agents"
version = "0.4.1"
description = "Complete agent memory: reasoning queries + vector search + auto-extraction. Decision intelligence for LangGraph, CrewAI, Google ADK, OpenAI Agents SDK, Pydantic AI, smolagents, LlamaIndex, Haystack, and CAMEL-AI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Phillip Clapham", email = "me@phillipclapham.com" }
]
keywords = [
    "flowscript",
    "agent-memory",
    "decision-intelligence",
    "langgraph",
    "langchain",
    "crewai",
    "google-adk",
    "openai-agents",
    "pydantic-ai",
    "smolagents",
    "llamaindex",
    "llama-index",
    "haystack",
    "camel-ai",
    "llm",
    "ai-agents",
    "vector-search",
    "embeddings",
    "unified-memory",
    "mem0-alternative"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Embedding providers for unified memory
openai-embeddings = ["openai>=1.0.0"]
local-embeddings = ["sentence-transformers>=2.0.0"]
all-embeddings = ["openai>=1.0.0", "sentence-transformers>=2.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
flowscript-mcp = "flowscript_agents.mcp:main"

[project.urls]
Homepage = "https://flowscript.org"
Repository = "https://github.com/phillipclapham/flowscript-agents"
Issues = "https://github.com/phillipclapham/flowscript-agents/issues"
Documentation = "https://flowscript.org"

[tool.hatch.build.targets.wheel]
packages = ["flowscript_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
